# Decade

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build.sh
.github/workflows/: cmake.yml
doc/codestyle/: cplusplus.md
doc/memo/: git.md
doc/zhihu/: Preface.md
doc/zhihu/uml/: cad_history.eddx  cad_types.eddx
examples/: CMakeLists.txt
examples/dceg_1/: CMakeLists.txt  main.cpp
examples/dceg_2/: CMakeLists.txt
examples/dceg_2/dynamic_library/: CMakeLists.txt  dynamic_library.cpp  dynamic_library.hpp
examples/dceg_2/executable/: CMakeLists.txt  main.cpp
examples/dceg_3/: CMakeLists.txt  application.cpp  application.hpp  command.cpp  command.hpp  coreapplication.cpp  coreapplication.hpp  generalcommand.cpp  generalcommand.hpp  main.cpp
examples/designpattern/: CMakeLists.txt
examples/designpattern/1_factorymethod/: CMakeLists.txt  app.cpp  app.hpp  concreteapp.cpp  concreteapp.hpp  main.cpp  product.cpp  product.hpp  producta.cpp  producta.hpp
examples/designpattern/2_abstractfactory/: CMakeLists.txt  abstractfactory.cpp  abstractfactory.hpp  client.cpp  client.hpp  keyboard.cpp  keyboard.hpp  logifactory.cpp  logifactory.hpp  logikeyboard.cpp  logikeyboard.hpp  logimouse.cpp  logimouse.hpp  main.cpp  mouse.cpp  mouse.hpp
examples/designpattern/3_builder/: CMakeLists.txt
examples/designpattern/4_prototype/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  producta.cpp  producta.hpp  productb.cpp  productb.hpp  prototype.cpp  prototype.hpp
examples/designpattern/5_singleton/: CMakeLists.txt  main.cpp  singleton.hpp
examples/test_qt_env/: CMakeLists.txt
samples/: CMakeLists.txt
samples/samples_1/: CMakeLists.txt  main.cpp
samples/test_qt_env/: CMakeLists.txt
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/kernel/: CMakeLists.txt
src/utility/: CMakeLists.txt  dcmath.hpp  dcmatrix.hpp  dctemplate.hpp  dcvector.hpp
unittest/: CMakeLists.txt
unittest/utility_test/: CMakeLists.txt
